# Snip

./: .gitignore  LICENSE  README.md  pyproject.toml
src/snip/: ai.py  cli.py  db.py  models.py
src/snip/providers/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
